syntax = "proto2";
package buffers.resources;

import "options.proto";

message Include {
  optional int32 id = 2 [(gmx) = "GMX_DEPRECATED"];

  optional bool exists = 4;
  optional int32 size = 5;

  enum ExportAction { DONT_EXPORT = 0; EXPORT_TO_TEMPORARY_DIRECTORY = 1; EXPORT_TO_WORKING_DIRECTORY = 2; EXPORT_TO_CUSTOM_DIRECTORY = 3; }

  optional ExportAction export_action = 6 [(gmx) = "exportAction"];
  optional string export_directory = 7 [(gmx) = "exportDir"];
  optional bool overwrite_existing = 8 [(gmx) = "overwrite"];
  optional bool free_after_export = 9 [(gmx) = "freeData"];
  optional bool remove_at_game_end = 10 [(gmx) = "removeEnd"];
  optional bool store = 11;

  optional string file_name = 12 [(gmx) = "filename", (file_path) = true];
}
